{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 50,
  "lineage": "60fb7cc3-ae76-2386-6461-e83c05114d9e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fazle-EC2-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a52ddb321b32a8c",
            "arn": "arn:aws:ec2:us-east-1:430704357939:instance/i-07ebf2738773fdf66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ebf2738773fdf66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fazle1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-088140435a76c7e07",
            "private_dns": "ip-192-134-0-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.134.0.8",
            "public_ip": "3.88.190.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ecce01113db6ed4c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e52aa3806d5de524",
            "tags": {
              "Name": "Fazle-ec2-Public",
              "Owner": "Fazle"
            },
            "tags_all": {
              "Name": "Fazle-ec2-Public",
              "Owner": "Fazle"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e54d9ecb5051fd9"
            ]
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.fazle-subnet",
            "aws_vpc.fazle-vpc",
            "data.aws_ami.latest_amazon_linux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fazle_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:internet-gateway/igw-0a0feb55029b9f6ac",
            "id": "igw-0a0feb55029b9f6ac",
            "owner_id": "430704357939",
            "vpc_id": "vpc-039958aaf6c6525cc"
          },
          "dependencies": [
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:route-table/rtb-0871b7a403623ee32",
            "id": "rtb-0871b7a403623ee32",
            "owner_id": "430704357939",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0feb55029b9f6ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039958aaf6c6525cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fazle_IGW",
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRT_Associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035a95d8fec042e4c",
            "route_table_id": "rtb-0871b7a403623ee32",
            "subnet_id": "subnet-0e52aa3806d5de524"
          },
          "dependencies": [
            "aws_internet_gateway.fazle_IGW",
            "aws_route_table.Public_RT",
            "aws_subnet.fazle-subnet",
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:security-group/sg-05e54d9ecb5051fd9",
            "description": "Security Group for my EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e54d9ecb5051fd9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg1",
            "name_prefix": "",
            "owner_id": "430704357939",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg1"
            },
            "tags_all": {
              "Name": "sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-039958aaf6c6525cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fazle-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:subnet/subnet-0e52aa3806d5de524",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.134.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e52aa3806d5de524",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430704357939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-039958aaf6c6525cc"
          },
          "dependencies": [
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fazle-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:vpc/vpc-039958aaf6c6525cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.134.0.0/16",
            "default_network_acl_id": "acl-0121c15928a4ce7b8",
            "default_route_table_id": "rtb-087281e3d833cc93a",
            "default_security_group_id": "sg-02ec5fd4183efae10",
            "dhcp_options_id": "dopt-0b9ceb20cd0988fd9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039958aaf6c6525cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087281e3d833cc93a",
            "owner_id": "430704357939"
          }
        }
      ]
    }
  ]
}